# Dawn

./: default.nix  giskard.cabal  hie.yaml  shell.nix
src/: Main.hs  Test.hs
src/Asimov/: Calculus.hs  Names.hs  Pretty.hs
src/Asimov/Calculus/: Abstractions.hs  ProtoTerm.hs  SyntacticEq.hs
src/Asimov/Typechecking/: CoC.hs  Common.hs  SystemF.hs  Tc.hs
src/Dawn/: Syntax.hs
src/Giskard/: Calculus.hs  Names.hs  Pretty.hs  Syntax.hs
src/Giskard/Calculus/: Abstractions.hs  Contexts.hs  Deduction.hs  Match.hs  Ppr.hs  ProtoTerm.hs  SynEq.hs  SyntacticEq.hs  Term.hs
src/Giskard/Calculus/Pretty/: Term.hs
src/Giskard/CalculusWIP/: Contexts.hs  Deduction.hs  Ppr.hs
src/Giskard/CoC/: Contexts.hs  Deduction.hs  Ppr.hs  Term.hs  Typechecking.hs
src/Giskard/Pretty/: Term.hs
src/Giskard/Telepath/: Engine.hs  Graph.hs  Monad.hs  Node.hs  Ops.hs  Types.hs
src/Giskard/Typechecking/: Common.hs  Monad.hs  Tc.hs
