Cabal-version:        2.2
Name:                 Giskard
Version:              0.0.0
Synopsis:             Giskard Automated Reasoning System
License:              BSD-2-Clause
License-file:         LICENSE
Author:               Simon Lovell Bart
Maintainer:           Simon Lovell Bart
Category:             
Build-type:           Simple

common common-options
  default-language:   Haskell2010
  default-extensions: BangPatterns
                      BinaryLiterals
                      DataKinds
                      DefaultSignatures
                      DeriveDataTypeable
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveLift
                      DeriveTraversable
                      DerivingStrategies
                      FlexibleContexts
                      FlexibleInstances
                      InstanceSigs
                      KindSignatures
                      LambdaCase
                      NoStarIsType
                      OverloadedStrings
                      ScopedTypeVariables
                      StandaloneDeriving
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      ViewPatterns

Library
  import:             common-options
  HS-Source-Dirs:     src

  Exposed-modules:    Main
                      Asimov.Calculus
                      Asimov.Calculus.Abstractions
                      Asimov.Calculus.ProtoTerm
                      Asimov.Calculus.SyntacticEq
                      -- Giskard.Calculus.Match
                      Asimov.Names
                      Asimov.Pretty
                      Asimov.Typechecking.Tc
                      Asimov.Typechecking.Common
                      -- Giskard.Typechecking.STLC
                      Asimov.Typechecking.SystemF
                      -- Giskard.Telepath.Types
                      -- Giskard.Telepath.Graph
                      -- Giskard.Telepath.Ops
                      -- Giskard.Telepath.Autograd
                      -- Giskard.Telepath.Engine

  ghc-options:        -Wall -Wcompat
  CPP-Options:        -DCABAL

  other-extensions:   DeriveAnyClass
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      RankNTypes
                      RecordWildCards
                      TemplateHaskell
                      UndecidableInstances

  Build-depends:      base                    >= 4.11     && < 5,
                      containers              >= 0.5.0.0  && < 0.7,
                      deepseq                 >= 1.3.0.2  && < 1.5,
                      exceptions              >= 0.8.3    && < 0.11.0,
                      hashable                >= 1.2.1.0  && < 1.5,
                      haskell-src-meta        >= 0.8      && < 0.9,
                      hmatrix,
                      lens                    >= 4.10     && < 5.2.0,
                      mtl                     >= 2.1.2    && < 2.3,
                      ordered-containers      >= 0.2      && < 0.3,
                      prettyprinter           >= 1.2.0.1  && < 1.8,
                      pretty-show             >= 1.9      && < 2.0,
                      primitive               >= 0.5.0.1  && < 1.0,
                      template-haskell        >= 2.8.0.0,
                      text                    >= 1.2.2    && < 2.1,
                      transformers            >= 0.5.2.0  && < 0.7,
                      unordered-containers    >= 0.2.3.3  && < 0.3

